--- a/gb/25/1/11/n14411162.md
+++ b/gb/25/1/11/n14411162.md
@@ -22,12 +22,12 @@
 <p><em>（本文参考了美联社的相关报导）</em></p>
 <p>责任编辑：叶紫微#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14644762.md#1">【独家】帕特尔：川普政府施压 北京断供芬太尼</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645800.md#1">洪都拉斯总统大选 为何美中台都关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645756.md#1">首席代表离职后 乌克兰代表团赴美谈判</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645759.md#1">西班牙爆非洲猪瘟 1/3猪肉出口证书遭冻结</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/27/n10515765.md#1" target="_blank">孙盛起：自己选择的路，只好用上吊绳走完</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/13/1/23/n3784118.md#1" target="_blank">他山：中共政法委的罪恶与政法系统人员的赎罪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/18/n11196827.md#1" target="_blank">【征文】张东园：中国国学大师的血泪遭遇(3)</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/12/n11936131.md#1" target="_blank">台湾中大教授：《转法轮》启发研究思路</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
